--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -378,3 +378,9 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
+#title {
+    -fx-font-size: 16pt;
+    -fx-text-fill: white;
+    -fx-padding: 1 3 1 3;
+}
