Add pricing to ProductMenu and change AddProductCommand to use ProductID

--- a/src/main/resources/view/ProductCard.fxml
+++ b/src/main/resources/view/ProductCard.fxml
@@ -24,6 +24,18 @@
                         <Region fx:constant="USE_PREF_SIZE" />
                     </minWidth>
                 </Label>
+                <Label fx:id="productCost" styleClass="cell_big_label">
+                    <minWidth>
+                        <!-- Ensures that the label text is never truncated -->
+                        <Region fx:constant="USE_PREF_SIZE" />
+                    </minWidth>
+                </Label>
+                <Label fx:id="productSales" styleClass="cell_big_label">
+                    <minWidth>
+                        <!-- Ensures that the label text is never truncated -->
+                        <Region fx:constant="USE_PREF_SIZE" />
+                    </minWidth>
+                </Label>
             </HBox>
         </VBox>
     </GridPane>
