--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
@@ -43,27 +44,35 @@
             <Insets bottom="5" left="10" right="10" top="5" />
           </padding>
         </StackPane>
+            <HBox minWidth="590.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <VBox prefHeight="400.0" prefWidth="340.0" HBox.hgrow="ALWAYS">
+                     <children>
 
-                    <VBox fx:id="personList" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
-          <padding>
-            <Insets bottom="10" left="10" right="10" top="10" />
-          </padding>
-          <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
-        </VBox>
+                                <VBox fx:id="personList" minHeight="200.0" minWidth="410.0" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
+                      <padding>
+                        <Insets bottom="10" left="10" right="10" top="10" />
+                      </padding>
+                      <StackPane fx:id="personListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+                    </VBox>
 
-                    <VBox fx:id="orderList" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
-          <padding>
-            <Insets bottom="10" left="10" right="10" top="10" />
-          </padding>
-          <StackPane fx:id="orderListPanelPlaceholder" VBox.vgrow="ALWAYS" />
-        </VBox>
+                                <VBox fx:id="orderList" minHeight="200.0" minWidth="410.0" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
+                      <padding>
+                        <Insets bottom="10" left="10" right="10" top="10" />
+                      </padding>
+                      <StackPane fx:id="orderListPanelPlaceholder" VBox.vgrow="ALWAYS" />
+                    </VBox>
+                     </children>
+                  </VBox>
 
-                          <VBox fx:id="menuList" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
-          <padding>
-            <Insets bottom="10" left="10" right="10" top="10" />
-          </padding>
-          <StackPane fx:id="productMenuPanelPlaceholder" VBox.vgrow="ALWAYS" />
-        </VBox>
+                                <VBox fx:id="menuList" minHeight="400.0" minWidth="180.0" styleClass="pane-with-border" HBox.hgrow="ALWAYS">
+                <padding>
+                  <Insets bottom="10" left="10" right="10" top="10" />
+                </padding>
+                <StackPane fx:id="productMenuPanelPlaceholder" VBox.vgrow="ALWAYS" />
+              </VBox>
+               </children>
+            </HBox>
 
         <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
       </VBox>
