--- a/src/main/resources/view/OrderListCard.fxml
+++ b/src/main/resources/view/OrderListCard.fxml
@@ -34,6 +34,10 @@
             <Label fx:id="totalSales" styleClass="cell_small_label" translateY="-8.0" />
             <Label fx:id="profit" styleClass="cell_small_label" translateY="-8.0" />
             <FlowPane fx:id="products" maxHeight="100.0" translateY="-3.0" />
+            <HBox>
+                <Region HBox.hgrow="ALWAYS"/> <!-- Spacer to push creation date to the right -->
+                <Label fx:id="creationDate" styleClass="cell_small_label" translateY = "-8.0"/>
+            </HBox>
         </VBox>
       <rowConstraints>
          <RowConstraints />
